--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -53,7 +53,7 @@
         <ul>
             @{
                 var contactList = new Models.MenuItem[] {
-                    new ("Follow @seanmcbeth on Mastodon", "mastodon", "https://mstdn.social/seanmcbeth", Rel: "me"),
+                    new ("Follow @seanmcbeth on Mastodon", "mastodon", "https://mstdn.social/@seanmcbeth", Rel: "me"),
                     new ("Follow @Sean_McBeth on Twitter", "twitter", "https://twitter.com/Sean_McBeth"),
                     new ("Follow Sean on GitHub", "github", "https://github.com/capnmidnight"),
                     new ("Follow Sean on LinkedIn", "linkedin", "https://www.linkedin.com/pub/sean-mcbeth/6/727/378"),
