--- a/Personal Site/Pages/VR.cshtml
+++ b/Personal Site/Pages/VR.cshtml
@@ -11,8 +11,24 @@
     <h3>Available</h3>
     <p>These are headsets that I currently own and have on-hand.</p>
 
+    <h4>Mobile Virtual Reality</h4>
+    <ul>
+        <li><a href="https://www.meta.com/quest/quest-pro/" target="_blank" rel="noopener">Meta Quest Pro</a>: The price puts it out of range for most people, but it is an incredibly good headset at any price.</li>
+        <li><a href="https://store.facebook.com/quest/products/quest-2/" target="_blank" rel="noopener">Meta Quest 2</a>: This became my daily driver over PC-tethered VR headsets, just because the setup is so easy and the experience was good enough. Untethered plus boundless tracking is quickly becoming min-spec, in my mind. We have 35 of these headsets at work for our students to perform VR immersions in foreign language learning.</li>
+        <li><a href="https://www.oculus.com/quest/" target="_blank" rel="noopener">Oculus Quest</a>: The Snapdragon 835 processor is getting pretty old, and you can see it in the games. Even though the display resolution is the same as most desktop systems, the lack of graphics budget for anti-aliasing and other graphics features makes the visuals a LOT worse.</li>
+        <li><a href="https://www.oculus.com/go/" target="_blank" rel="noopener">Oculus Go</a>: Mostly a relic now.</li>
+        <li><a href="https://www.samsung.com/global/galaxy/gear-vr/" target="_blank" rel="noopener">Samsung Gear VR</a>: I have a SM-R324 version, with the motion controller, of the Gear VR (the last white version they distrubeted) with a Samsung Galaxy S8 to run in it. This was the first mobile VR headset I used on a regular basis, and even bought my father one for his phone.</li>
+        <li><a href="https://www.lenovo.com/us/en/virtual-reality-and-smart-devices/virtual-and-augmented-reality/lenovo-mirage-solo/Mirage-Solo/p/ZZIRZRHVR01" target="_blank" rel="noopener">Lenovo Mirage Solo</a>: I wish this headset had delayed to include the 6DOF controllers. It's an excellent headset, and I enjoy working in the Daydream ecosystem. I'm pissed off at Google for killing Daydream. I kind of feel like Lenovo went out on a limb to make a headset to-spec and then Google did nothing to back it up, letting it all die on the vine.</li>
+        <li><a href="https://en.wikipedia.org/wiki/Pixel_6" target="_blank" rel="noopener">Google Pixel 6</a>: I have a Google Pixel 6 for ARCore projects. It is my daily-driver phone.</li>
+        <li><a href="https://vr.google.com/daydream/" target="_blank" rel="noopener">Google Daydream</a>: I have a Daydream View 2 with a Google Pixel 2 smartphone. The smartphone is my daily-driver. I have two standard 3DOF controllers for it. I'm *still* pissed off at Google for killing Daydream.</li>
+        <li><a href="https://enterprise.vive.com/us/vivefocus/" target="_blank" rel="noopener">Vive Focus</a>: I haven't used it in over a year. It's ok, I guess. Not very comfortable. Programming for it is a mess. The store is anemic. Might be good for corporate environments that don't want to interface with Facebook to get control over application deployments.</li>
+        <li><a href="https://vr.google.com/cardboard/" target="_blank" rel="noopener">Google Cardboard</a>: I easily have a dozen different "dumb" slot-in-smartphone headsets, both purchased and of my own creation.</li>
+        <li><em>Pico Neo DK</em> I have a Pico Neo dev-kit, which is a 3DOF headset with a gamepad controlller. It's interesting from a historical perspective.</li>
+    </ul>
+
     <h4>Tethered PC Virtual Reality</h4>
     <ul>
+        <li><a href="https://www.hp.com/us-en/vr/reverb-g2-vr-headset-omnicept-edition.html">HP Reverb G2 Omnicept Edition</a>: Surprisingly, I didn't like this headset as much as the Samsung Odyssey+. There is a weird, nearly imperceptable hitch in the tracking that ends up causing a lot of eye strain for me. I want to like this headset, but it's just too hard to use for an extended period of time.</li>
         <li><a href="https://www.samsung.com/us/computing/hmd/windows-mixed-reality/hmd-odyssey-windows-mixed-reality-headset-xe800zba-hc1us/" target="_blank" rel="noopener">Samsung Odyssey+</a>: Getting into the sweet spot of the lenses is a little difficult, but when you do, the visual clarity is excellent.</li>
         <li><a href="https://www8.hp.com/us/en/campaigns/mixedrealityheadset/overview.html" target="_blank" rel="noopener">HP Windows Mixed Reality Headset</a>: I used to really love this headset, with the flip-up visor. I wish more headsets had this feature. The cable is a little short, and now that I have the Valve Index I primarily use that.</li>
         <li><a href="https://www.vive.com/us/product/vive-virtual-reality-system/" target="_blank" rel="noopener">HTC Vive</a>: My standard Vive is equipped with the <a href="https://www.vive.com/us/vive-deluxe-audio-strap/" target="_blank" rel="noopener">Deluxe Audio Strap</a> and the <a href="https://www.tpcastvr.com/store/TPCAST-Wireless-Adapter-for-VIVE-p93101456" target="_blank" rel="noopener">TPCAST Wireless Adapater</a>. I also have two <a href="https://www.vive.com/us/vive-tracker/" target="_blank" rel="noopener">Vive Trackers</a> with hand straps. I don't really use it anymore.</li>
@@ -23,20 +39,6 @@
         <li><a href="https://www.oculus.com/rift" target="_blank" rel="noopener">Oculus Rift CV1</a>: I don't really like this headset. I think it was a lackluster release from a company that hyped it up way too much. At the time it came out, I bought an HTC Vive instead. But I now have a Rift CV1 to round out the library.</li>
         <li><a href="https://developer.oculus.com/blog/open-source-release-of-rift-dk2/" target="_blank" rel="noopener">Oculus Rift DK2</a>: I still have my first "real" VR headset.</li>
         <li><a href="https://github.com/facebookarchive/RiftDK1/" target="_blank" rel="noopener">Oculus Rift DK1</a>: I don't really know why I have this.</li>
-    </ul>
-
-    <h4>Mobile Virtual Reality</h4>
-    <ul>
-        <li><a href="https://store.facebook.com/quest/products/quest-2/" target="_blank" rel="noopener">Oculus Quest</a>: I end up using this headset a lot because the setup is so easy. Untethered plus boundless tracking is quickly becoming min-spec, in my mind. </li>
-        <li><a href="https://www.oculus.com/quest/" target="_blank" rel="noopener">Oculus Quest</a>: The Snapdragon 835 processor is getting pretty old, and you can see it in the games. Even though the display resolution is the same as most desktop systems, the lack of graphics budget for anti-aliasing and other graphics features makes the visuals a LOT worse.</li>
-        <li><a href="https://www.oculus.com/go/" target="_blank" rel="noopener">Oculus Go</a>: Mostly a relic now.</li>
-        <li><a href="https://www.samsung.com/global/galaxy/gear-vr/" target="_blank" rel="noopener">Samsung Gear VR</a>: I have a SM-R324 version, with the motion controller, of the Gear VR (the last white version they distrubeted) with a Samsung Galaxy S8 to run in it. This was the first mobile VR headset I used on a regular basis, and even bought my father one for his phone.</li>
-        <li><a href="https://www.lenovo.com/us/en/virtual-reality-and-smart-devices/virtual-and-augmented-reality/lenovo-mirage-solo/Mirage-Solo/p/ZZIRZRHVR01" target="_blank" rel="noopener">Lenovo Mirage Solo</a>: I wish this headset had delayed to include the 6DOF controllers. It's an excellent headset, and I enjoy working in the Daydream ecosystem. I'm pissed off at Google for killing Daydream. I kind of feel like Lenovo went out on a limb to make a headset to-spec and then Google did nothing to back it up, letting it all die on the vine.</li>
-        <li><a href="https://en.wikipedia.org/wiki/Pixel_6" target="_blank" rel="noopener">Google Pixel 6</a>: I have a Google Pixel 6 for ARCore projects. It is my daily-driver phone.</li>
-        <li><a href="https://vr.google.com/daydream/" target="_blank" rel="noopener">Google Daydream</a>: I have a Daydream View 2 with a Google Pixel 2 smartphone. The smartphone is my daily-driver. I have two standard 3DOF controllers for it. I'm *still* pissed off at Google for killing Daydream.</li>
-        <li><a href="https://enterprise.vive.com/us/vivefocus/" target="_blank" rel="noopener">Vive Focus</a>: I haven't used it in over a year. It's ok, I guess. Not very comfortable. Programming for it is a mess. The store is anemic. Might be good for corporate environments that don't want to interface with Facebook to get control over application deployments.</li>
-        <li><a href="https://vr.google.com/cardboard/" target="_blank" rel="noopener">Google Cardboard</a>: I easily have a dozen different "dumb" slot-in-smartphone headsets, both purchased and of my own creation.</li>
-        <li><em>Pico Neo DK</em> I have a Pico Neo dev-kit, which is a 3DOF headset with a gamepad controlller. It's interesting from a historical perspective.</li>
     </ul>
 
     <h4>Augmented Reality</h4>
