--- a/Personal Site/Pages/Other.cshtml
+++ b/Personal Site/Pages/Other.cshtml
@@ -18,14 +18,30 @@
     </ul>
     <h2><a name="profiles">Online Profiles</a></h2>
     <ul>
-        <li><a href="https://twitter.com/Sean_McBeth" target="_blank" rel="noopener">Twitter</a></li>
-        <li><a href="https://github.com/capnmidnight" target="_blank" rel="noopener">Github</a></li>
-        <li><a href="https://news.ycombinator.com/user?id=moron4hire" target="_blank" rel="noopener">Hacker News</a></li>
-        <li><a href="https://mastodon.cloud/@@SeanMcBeth" target="_blank" rel="noopener">Mastodon</a></li>
-        <li><a href="https://www.npmjs.com/~seanmcbeth" target="_blank" rel="noopener">NPM</a></li>
-        <li><a href="https://www.youtube.com/user/moron4hire" target="_blank" rel="noopener">YouTube</a></li>
-        <li><a href="https://codepen.io/SeanMcBeth/" target="_blank" rel="noopener">CodePen</a></li>
-        <li><a href="https://www.imdb.com/name/nm5111059/" target="_blank" rel="noopener">IMDB (yup)</a></li>
+        @{
+            foreach (var (id, site, href) in new[] {
+                ("@seanmcbeth", "Mastodon", "https://mstdn.social/@seanmcbeth"),
+                ("capnmidnight", "Github", "https://github.com/capnmidnight"),
+                ("moron4hire", "YouTube", "https://www.youtube.com/user/moron4hire"),
+                ("SeanMcBeth", "CodePen", "https://codepen.io/SeanMcBeth/"),
+                ("seanmcbeth", "NPM", "https://www.npmjs.com/~seanmcbeth"),
+                ("Sean T. McBeth", "LinkedIn", "https://www.linkedin.com/pub/sean-mcbeth/6/727/378"),
+                ("moron4hire", "Hacker News", "https://news.ycombinator.com/user?id=moron4hire"),
+                ("Sean_McBeth", "Twitter", "https://twitter.com/Sean_McBeth"),
+                ("Sean T. McBeth", "IMDB", "https://www.imdb.com/name/nm5111059/")
+            })
+            {
+                <li>
+                    <a href="@href"
+                        target="_blank"
+                        rel="noopener"
+                        aria-label="Follow @id on @site"
+                        title="Follow @id on @site">
+                        @site
+                    </a>
+                </li>
+            }
+        }
     </ul>
     <h2><a name="projects">Past Projects</a></h2>
     <p>Here are some of the projects I had worked on in the past, that are either now finished or defunct.</p>
