new Mastodon link

--- a/Personal Site/Pages/Other.cshtml
+++ b/Personal Site/Pages/Other.cshtml
@@ -20,7 +20,7 @@
     <ul>
         @{
             foreach (var (id, site, href) in new[] {
-                ("@seanmcbeth", "Mastodon", "https://mstdn.social/@seanmcbeth"),
+                ("@seanmcbeth", "Mastodon", "https://arvr.social/@seanmcbeth"),
                 ("capnmidnight", "Github", "https://github.com/capnmidnight"),
                 ("moron4hire", "YouTube", "https://www.youtube.com/user/moron4hire"),
                 ("SeanMcBeth", "CodePen", "https://codepen.io/SeanMcBeth/"),
