--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -50,7 +50,7 @@
         <ul>
             @{
                 foreach (var (text, icon, url, rel) in new[] {
-                    ("Follow @seanmcbeth on Mastodon", "mastodon", "https://mstdn.social/@seanmcbeth", "me"),
+                    ("Follow @seanmcbeth on Mastodon", "mastodon", "https://arvr.social/@seanmcbeth", "me"),
                     ("Follow Sean on GitHub", "github", "https://github.com/capnmidnight", ""),
                     ("Follow Sean on LinkedIn", "linkedin", "https://www.linkedin.com/pub/sean-mcbeth/6/727/378", ""),
                     ("Email Sean", "email", "mailto:sean@removethis.seanmcbeth.com", ""),
