--- a/Personal Site/Pages/App.cshtml
+++ b/Personal Site/Pages/App.cshtml
@@ -21,13 +21,14 @@
     {
         <link rel="manifest" href="@Model.ManifestPath">
     }
-    @if (Model.IncludeThreeJS)
-    {
-        <bundle-js name="three" versioned />
-    }
+    <bundle-css name="apps" versioned />
     @if(Model.IncludeStylesheet) 
     {
         <bundle-css dir="js" name="@(Model.Name + "-app")/index" versioned />
+    }
+    @if (Model.IncludeThreeJS)
+    {
+        <bundle-js name="three" versioned />
     }
     <bundle-js name="@(Model.Name + "-app")" versioned />
 }
