--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -88,7 +88,7 @@
     </p>
 
     <p>
-        I built DLS VR from scratch, using the Three.js library, to run on desktop computers, mobile devices, and VR headsets. 
+        I built DLS VR from scratch, using the <a href="https://threejs.org">Three.js library</a>, to run on desktop computers, mobile devices, and VR headsets.
         Users in the VR front end see each other as a synthetic avatar, with spatialized voice chat, shared pointers, and
         full body language through shared hand tracking. Students and instructors engaged in a "guided tour" experience,
         where they discussed the cultural of their target language through the visuals they saw and played role-play scenarios <em>in situ</em>.
